# LED-GlowSimulator

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  assert_handler.c  flash_handler.c  launch.vs.json.backup  ledstrip_driver.c  ledstrip_driver.h  main.c  string_handler.c  string_handler.h  timer_handler.c  timer_handler.h
simulators/: elektra_sim_20.c  matrix_sim_10x10.c  matrix_sim_16x16.c
